--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,6 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
-    "solid-js": "^1.5.4",
-    "@solid-habitat/utils": "workspace:*"
+    "solid-js": "^1.5.4"
   }
 }
