--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "pnpm": "^7.10.0"
   },
   "publishConfig": {
-    "directory": "packages/core/dist"
+    "directory": "packages/core"
   }
 }
