--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "solid-habitat",
+  "name": "@solid-habitat/root",
   "version": "0.1.0",
   "description": "Solid Habitat monorepo",
   "type": "module",
   "scripts": {
-    "build:lib": "pnpm --filter @solid-habitat/core build",
+    "build:lib": "pnpm --filter solid-habitat build",
     "build": "pnpm -r --stream build",
     "dev": "pnpm --filter @solid-habitat/examples run dev"
   },
