--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-habitat",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Solid Habitat",
   "type": "module",
   "files": [
@@ -20,6 +20,7 @@
     "build": "vite build",
     "serve": "vite preview"
   },
+  "types": "./index.d.ts",
   "license": "MIT",
   "devDependencies": {
     "typescript": "^4.8.2",
